--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
         </div>
 
 
+        
+        <p class="text-center font-weight-bolder my-5 d-none"
+                    id="noProducts">There is no product</p>
+
 
         <div id="dataContainer" class="d-block">
             <div class="container my-5">
@@ -83,6 +87,7 @@
         </div>
 
 
+        
         <script src="js/app.js"></script>
     </body>
 </html>
