modify search highlight

--- a/index.html
+++ b/index.html
@@ -93,7 +93,9 @@
 
         </div>
 
-        
+        <script src="http://libs.baidu.com/jquery/1.7.2/jquery.min.js"></script>
+        <script
+            src="https://cdnjs.cloudflare.com/ajax/libs/mark.js/8.11.1/jquery.mark.es6.js"></script>
         <script src="js/app.js"></script>
     </body>
 </html>
